stopped buttons wrapping

--- a/media/css/screen.scss
+++ b/media/css/screen.scss
@@ -135,7 +135,7 @@ header {
 
 .button-block {
     float: left;
-    min-width: 12em;
+//    min-width: 12em;
 
     @media only screen and ( max-width: 800px ) {
         min-width: 100%;
@@ -147,9 +147,15 @@ header {
     padding-left: 1em;
     padding-top: 0.5em;
     padding-bottom: 0.5em;
+    max-height: 2.5em;
+    overflow: hidden;
     vertical-align: middle;
     width: 100%;
     background: #fff;
+}
+
+.button-block a {
+    white-space: nowrap;
 }
 
 .highlight {
